# routes/auth.js
@@ -4,73 +4,88 @@ const MySql = require("../routes/utils/MySql");
 const DButils = require("../routes/utils/DButils");
 const bcrypt = require("bcrypt");
 
-router.post("/Register", async (req, res, next) => {
-  try {
-    // parameters exists
-    // valid parameters
-    // username exists
-    let user_details = {
+router.post("/Register", async (req, res, next) => 
+{
+  try 
+  {
+    // Check if user already logged in
+    if (req.session.user_id != undefined)
+    throw { status: 401, message: "User already logged in" };
+
+    let user_details = 
+    {
       username: req.body.username,
       firstname: req.body.firstname,
       lastname: req.body.lastname,
       country: req.body.country,
       password: req.body.password,
       email: req.body.email,
-      profilePic: req.body.profilePic
+      // profilePic: req.body.profilePic
     }
+
+    // Check if parameters exists
+    if (!user_details.username || !user_details.firstname || !user_details.lastname || !user_details.country || !user_details.password || !user_details.email) 
+      throw { status: 401, message: "One or more arguments are missing" };
+
+    // Validate parameters
+
+    // Check if username already exists
     let users = [];
     users = await DButils.execQuery("SELECT username from users");
 
     if (users.find((x) => x.username === user_details.username))
-      throw { status: 409, message: "Username taken" };
+      throw { status: 401, message: "Username already exists" };
 
-    // add the new username
-    let hash_password = bcrypt.hashSync(
-      user_details.password,
-      parseInt(process.env.bcrypt_saltRounds)
-    );
+    // Add the new username
+    let hash_password = bcrypt.hashSync(user_details.password, parseInt(process.env.bcrypt_saltRounds));
+    
     await DButils.execQuery(
-      `INSERT INTO users VALUES ('${user_details.username}', '${user_details.firstname}', '${user_details.lastname}',
+      `INSERT INTO users (username, firstname, lastname, country, password, email) 
+      VALUES ('${user_details.username}', '${user_details.firstname}', '${user_details.lastname}',
       '${user_details.country}', '${hash_password}', '${user_details.email}')`
     );
-    res.status(201).send({ message: "user created", success: true });
-  } catch (error) {
+    res.status(201).send({ message: "User created successfully", success: true });
+  } 
+  catch (error) 
+  {
     next(error);
   }
 });
 
-router.post("/Login", async (req, res, next) => {
-  try {
-    // check that username exists
+
+router.post("/Login", async (req, res, next) => 
+{
+  try 
+  {
+    // Check if user already logged in
+    if (req.session.user_id != undefined)
+      throw { status: 401, message: "User already logged in" };
+
+    // Check that username exists
     const users = await DButils.execQuery("SELECT username FROM users");
     if (!users.find((x) => x.username === req.body.username))
       throw { status: 401, message: "Username or Password incorrect" };
 
-    // check that the password is correct
-    const user = (
-      await DButils.execQuery(
-        `SELECT * FROM users WHERE username = '${req.body.username}'`
-      )
-    )[0];
-
-    if (!bcrypt.compareSync(req.body.password, user.password)) {
+    // Check that the password is correct
+    const user = (await DButils.execQuery(`SELECT * FROM users WHERE username = '${req.body.username}'`))[0];
+    if (!bcrypt.compareSync(req.body.password, user.password))
       throw { status: 401, message: "Username or Password incorrect" };
-    }
 
     // Set cookie
-    req.session.user_id = user.username;
+    req.session.user_id = user.user_id;
 
-
-    // return cookie
-    res.status(200).send({ message: "login succeeded", success: true });
-  } catch (error) {
+    // Return cookie
+    res.status(200).send({ message: "Login succeeded", success: true });
+  }
+  catch (error) 
+  {
     next(error);
   }
 });
 
 router.post("/Logout", function (req, res) {
-  req.session.reset(); // reset the session info --> send cookie when  req.session == undefined!!
-  res.send({ success: true, message: "logout succeeded" });
+  req.session.reset();  // reset the session info --> send cookie when req.session == undefined
+  res.send({ success: true, message: "Logout succeeded" });
 });
 
 module.exports = router;
